--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -181,7 +181,7 @@ div#mini-head{
                     position: fixed;
                     top:0;
                     right: 0;
-                    width: 80%;
+                    width: 50%;
                     height: 100vh;
                     padding: 0 15px;
                     border-left: solid  1px rgb(240, 240, 240);
@@ -195,17 +195,55 @@ div#mini-head{
                         padding: 15px 0;
                     }
                     .mid{
-                        height: 40%;
+                        overflow-x: hidden;
                         display: flex;
-                        align-items: center;
                         justify-content: center;
+                        align-items: center;
+                        height: 40%;
+                        width: 100%;
                         ul{
-                            margin: 0;
-                            padding: 0;
+                            width: 100%;
+                            height: 100%;
                             list-style: none;
+                            padding: 0;
+                            margin: 0;
+                            color: gray;
+                            li.when-empty-cart{
+                                position: relative;
+                                top: 50%;
+                                display: flex;
+                                justify-content: center;
+                                width: 100%;
+                            }
+                            li.text{
+                                padding: 15px 0 75px;
+                                display: flex;
+                                justify-content: space-between;
+                                width: 100%;
+                                border-bottom:solid 0.5px rgb(240, 240, 240);
+                                .image{
+                                    width: 30%;
+                                    img{
+                                        width: 100px; 
+                                        height: 100px;
+                                    }
+                                }
+
+                                .delete{
+                                    width: 20%;
+                                    display: flex;
+                                    justify-content: flex-end;
+                                    align-items: center;
+                                    i{
+                                        font-size: 15px;
+                                    }
+                                }
+                            }
                         }
                     }
                     .bottom{
+                        background-color: white;
+                        padding: 10px;
                         position: sticky;
                         bottom: 0;
                         height: 30%;
@@ -593,6 +631,7 @@ header{
                             li.when-empty-cart{
                                 position: relative;
                                 top: 50%;
+                                display: flex;
                                 justify-content: center;
                                 width: 100%;
                             }
