--- a/assets/css/registerStyle.css
+++ b/assets/css/registerStyle.css
@@ -40,6 +40,11 @@ section#register .container .row .left-bar .categories .body ul li {
   line-height: 35px;
   font-size: 14px;
 }
+@media screen and (max-width: 391px) {
+  section#register .container .row .left-bar .categories .body {
+    display: none;
+  }
+}
 section#register .container .row .left-bar .bestsellers {
   border: solid 0.5px rgb(230, 230, 230);
   margin-bottom: 30px;
@@ -73,6 +78,11 @@ section#register .container .row .left-bar .bestsellers .body .products .product
   color: #EB4D50;
   font-size: 14px;
   font-weight: 500;
+}
+@media screen and (max-width: 391px) {
+  section#register .container .row .left-bar .bestsellers .body {
+    display: none;
+  }
 }
 section#register .container .row .left-bar .latest-products {
   border: solid 0.5px rgb(230, 230, 230);
@@ -111,6 +121,11 @@ section#register .container .row .left-bar .latest-products .body .products .pro
 section#register .container .row .left-bar .latest-products .body .products .product-detail .discount {
   text-decoration: line-through;
   color: #888;
+}
+@media screen and (max-width: 391px) {
+  section#register .container .row .left-bar .latest-products .body {
+    display: none;
+  }
 }
 @media screen and (max-width: 821px) {
   section#register .container .row .left-bar {
