--- a/assets/scss/cartStyle.scss
+++ b/assets/scss/cartStyle.scss
@@ -132,6 +132,9 @@ section#cart{
                     overflow: scroll;
                 }
             }
+            &::-webkit-scrollbar {
+                display: none;
+            }
         }
         .to-do-next{
             display: none;
@@ -285,7 +288,7 @@ section#cart{
                         margin-bottom: 20px;
                     }
                 }
-                .total{
+                .total-table{
                     width: 35%;
                     height: max-content;
                     border: solid 0.5px #e9e9e9;
