--- a/assets/scss/cartStyle.scss
+++ b/assets/scss/cartStyle.scss
@@ -163,6 +163,14 @@ section#cart{
                             padding: 10px 15px;
                             font-weight: 500;
                             font-size: 14px;
+                            display: flex;
+                            justify-content: space-between;
+                            i{
+                                transition: 0.5s;
+                            }
+                            .active-i{
+                                transform: rotateZ(-180deg);
+                            }
                         }
                         .step-bottom{
                             display: none;
