--- a/assets/css/categoryStyle.css
+++ b/assets/css/categoryStyle.css
@@ -34,6 +34,20 @@ section#collection .container .row .left-bar .categories .head h5 {
   letter-spacing: 1px;
   font-size: 16px;
   font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+}
+section#collection .container .row .left-bar .categories .head h5 i {
+  transition: 0.5s;
+  display: none;
+}
+@media screen and (max-width: 391px) {
+  section#collection .container .row .left-bar .categories .head h5 i {
+    display: block;
+  }
+}
+section#collection .container .row .left-bar .categories .head h5 .active-i {
+  transform: rotateZ(-180deg);
 }
 section#collection .container .row .left-bar .categories .body {
   padding: 0 15px;
@@ -66,6 +80,20 @@ section#collection .container .row .left-bar .refine-search .head h5 {
   letter-spacing: 1px;
   font-size: 16px;
   font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+}
+section#collection .container .row .left-bar .refine-search .head h5 i {
+  transition: 0.5s;
+  display: none;
+}
+@media screen and (max-width: 391px) {
+  section#collection .container .row .left-bar .refine-search .head h5 i {
+    display: block;
+  }
+}
+section#collection .container .row .left-bar .refine-search .head h5 .active-i {
+  transform: rotateZ(-180deg);
 }
 section#collection .container .row .left-bar .refine-search .body {
   padding: 15px;
@@ -120,6 +148,20 @@ section#collection .container .row .left-bar .bestsellers .head h5 {
   letter-spacing: 1px;
   font-size: 16px;
   font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+}
+section#collection .container .row .left-bar .bestsellers .head h5 i {
+  transition: 0.5s;
+  display: none;
+}
+@media screen and (max-width: 391px) {
+  section#collection .container .row .left-bar .bestsellers .head h5 i {
+    display: block;
+  }
+}
+section#collection .container .row .left-bar .bestsellers .head h5 .active-i {
+  transform: rotateZ(-180deg);
 }
 section#collection .container .row .left-bar .bestsellers .body {
   padding: 15px;
@@ -159,6 +201,20 @@ section#collection .container .row .left-bar .latest-products .head h5 {
   letter-spacing: 1px;
   font-size: 16px;
   font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+}
+section#collection .container .row .left-bar .latest-products .head h5 i {
+  transition: 0.5s;
+  display: none;
+}
+@media screen and (max-width: 391px) {
+  section#collection .container .row .left-bar .latest-products .head h5 i {
+    display: block;
+  }
+}
+section#collection .container .row .left-bar .latest-products .head h5 .active-i {
+  transform: rotateZ(-180deg);
 }
 section#collection .container .row .left-bar .latest-products .body {
   padding: 15px;
