--- a/assets/css/loginStyle.css
+++ b/assets/css/loginStyle.css
@@ -33,6 +33,20 @@ section#login-page .container .row .left-bar .categories .head h5 {
   letter-spacing: 1px;
   font-size: 16px;
   font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+}
+section#login-page .container .row .left-bar .categories .head h5 i {
+  transition: 0.5s;
+  display: none;
+}
+@media screen and (max-width: 391px) {
+  section#login-page .container .row .left-bar .categories .head h5 i {
+    display: block;
+  }
+}
+section#login-page .container .row .left-bar .categories .head h5 .active-i {
+  transform: rotateZ(-180deg);
 }
 section#login-page .container .row .left-bar .categories .body {
   padding: 0 15px;
@@ -65,6 +79,20 @@ section#login-page .container .row .left-bar .bestsellers .head h5 {
   letter-spacing: 1px;
   font-size: 16px;
   font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+}
+section#login-page .container .row .left-bar .bestsellers .head h5 i {
+  transition: 0.5s;
+  display: none;
+}
+@media screen and (max-width: 391px) {
+  section#login-page .container .row .left-bar .bestsellers .head h5 i {
+    display: block;
+  }
+}
+section#login-page .container .row .left-bar .bestsellers .head h5 .active-i {
+  transform: rotateZ(-180deg);
 }
 section#login-page .container .row .left-bar .bestsellers .body {
   padding: 15px;
@@ -104,6 +132,20 @@ section#login-page .container .row .left-bar .latest-products .head h5 {
   letter-spacing: 1px;
   font-size: 16px;
   font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+}
+section#login-page .container .row .left-bar .latest-products .head h5 i {
+  transition: 0.5s;
+  display: none;
+}
+@media screen and (max-width: 391px) {
+  section#login-page .container .row .left-bar .latest-products .head h5 i {
+    display: block;
+  }
+}
+section#login-page .container .row .left-bar .latest-products .head h5 .active-i {
+  transform: rotateZ(-180deg);
 }
 section#login-page .container .row .left-bar .latest-products .body {
   padding: 15px;
