--- a/assets/scss/categoryStyle.scss
+++ b/assets/scss/categoryStyle.scss
@@ -27,6 +27,18 @@ section#collection{
               letter-spacing: 1px;
               font-size: 16px;
               font-weight: 400;
+              display: flex;
+              justify-content: space-between;
+              i{
+                  transition: 0.5s;
+                  display: none;
+                  @media screen and (max-width:391px) {
+                    display: block;
+                  }
+              }
+              .active-i{
+                  transform: rotateZ(-180deg);
+              }
             }
           }
           .body{
@@ -57,6 +69,18 @@ section#collection{
               letter-spacing: 1px;
               font-size: 16px;
               font-weight: 400;
+              display: flex;
+              justify-content: space-between;
+              i{
+                  transition: 0.5s;
+                  display: none;
+                  @media screen and (max-width:391px) {
+                    display: block;
+                  }
+              }
+              .active-i{
+                  transform: rotateZ(-180deg);
+              }
             }
           }
           .body{
@@ -109,6 +133,18 @@ section#collection{
               letter-spacing: 1px;
               font-size: 16px;
               font-weight: 400;
+              display: flex;
+              justify-content: space-between;
+              i{
+                  transition: 0.5s;
+                  display: none;
+                  @media screen and (max-width:391px) {
+                    display: block;
+                  }
+              }
+              .active-i{
+                  transform: rotateZ(-180deg);
+              }
             }
           }
           .body{
@@ -146,6 +182,18 @@ section#collection{
               letter-spacing: 1px;
               font-size: 16px;
               font-weight: 400;
+              display: flex;
+              justify-content: space-between;
+              i{
+                  transition: 0.5s;
+                  display: none;
+                  @media screen and (max-width:391px) {
+                    display: block;
+                  }
+              }
+              .active-i{
+                  transform: rotateZ(-180deg);
+              }
             }
           }
           .body{
