--- a/assets/scss/loginStyle.scss
+++ b/assets/scss/loginStyle.scss
@@ -27,6 +27,18 @@ section#login-page{
                       letter-spacing: 1px;
                       font-size: 16px;
                       font-weight: 400;
+                      display: flex;
+                      justify-content: space-between;
+                      i{
+                        transition: 0.5s;
+                        display: none;
+                        @media screen and (max-width:391px) {
+                          display: block;
+                        }
+                      }
+                      .active-i{
+                          transform: rotateZ(-180deg);
+                      }
                     }
                   }
                   .body{
@@ -57,6 +69,18 @@ section#login-page{
                       letter-spacing: 1px;
                       font-size: 16px;
                       font-weight: 400;
+                      display: flex;
+                      justify-content: space-between;
+                      i{
+                        transition: 0.5s;
+                        display: none;
+                        @media screen and (max-width:391px) {
+                          display: block;
+                        }
+                      }
+                      .active-i{
+                          transform: rotateZ(-180deg);
+                      }
                     }
                   }
                   .body{
@@ -94,6 +118,18 @@ section#login-page{
                       letter-spacing: 1px;
                       font-size: 16px;
                       font-weight: 400;
+                      display: flex;
+                      justify-content: space-between;
+                      i{
+                        transition: 0.5s;
+                        display: none;
+                        @media screen and (max-width:391px) {
+                          display: block;
+                        }
+                      }
+                      .active-i{
+                          transform: rotateZ(-180deg);
+                      }
                     }
                   }
                   .body{
